Fix face loop generation via shapely
- Fix and retain geometry in graph
- Add debug parameter

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -82,7 +82,8 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "debug = False  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -184,15 +185,16 @@
     "    \"node_start\": (),\n",
     "    \"node_end\": (),\n",
     "    \"weight\": (),\n",
-    "    \"max_slope\": (),\n",
     "    \"edge_id\": (),\n",
+    "    \"max_slope\": (),\n",
+    "    \"geometry\": (),\n",
     "}\n",
     "for c_name, _ in edges.items():\n",
     "    if c_name not in used_columns:\n",
     "        del edges[c_name]\n",
     "\n",
     "# Reorder columns\n",
-    "edges = edges[[\"node_start\", \"node_end\", \"weight\", \"max_slope\", \"edge_id\"]]\n",
+    "edges = edges[[\"node_start\", \"node_end\", \"weight\", \"edge_id\", \"max_slope\", \"geometry\"]]\n",
     "edges = edges.dropna()  # Drop edges with None node_start or node_end\n",
     "edges"
    ]
@@ -216,7 +218,7 @@
     "    edges.itertuples(index=False),\n",
     "    directed=False,\n",
     "    weights=False,\n",
-    "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\"],\n",
+    "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\", \"geometry\"],\n",
     ")"
    ]
   },
@@ -238,13 +240,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -278,13 +281,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -313,7 +317,7 @@
     "G.simplify(\n",
     "    multiple=True,\n",
     "    loops=True,\n",
-    "    combine_edges=dict(weight=min, max_slope=max, edge_id=min),\n",
+    "    combine_edges=dict(weight=min, max_slope=max, edge_id=min, geometry=\"first\"),\n",
     ");"
    ]
   },
@@ -325,13 +329,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -373,13 +378,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -433,7 +439,7 @@
     "G.simplify(\n",
     "    multiple=True,\n",
     "    loops=True,\n",
-    "    combine_edges=dict(weight=min, max_slope=max, edge_id=min),\n",
+    "    combine_edges=dict(weight=min, edge_id=min, max_slope=max, geometry=\"first\"),\n",
     ");"
    ]
   },
@@ -448,13 +454,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -498,13 +505,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -538,13 +546,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=get_edgewidth(G.ecount()),\n",
-    ");"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -684,19 +693,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edge_widths = []\n",
-    "for e in G.es:\n",
-    "    edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)\n",
+    "if debug:\n",
+    "    edge_widths = []\n",
+    "    for e in G.es:\n",
+    "        edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)\n",
     "\n",
-    "fig = plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_width=edge_widths,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"POI diversity\")\n",
-    "plt.tight_layout()"
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=edge_widths,\n",
+    "    )\n",
+    "    plt.text(0, 0.04, \"POI diversity\")\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -716,22 +726,23 @@
    },
    "outputs": [],
    "source": [
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e[\"has_water\"]:\n",
-    "        edge_colors.append(\"blue\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")\n",
+    "if debug:\n",
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e[\"has_water\"]:\n",
+    "            edge_colors.append(\"blue\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"grey\")\n",
     "\n",
-    "fig = plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_color=edge_colors,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"Water links highlighted\")\n",
-    "plt.tight_layout()"
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(0, 0.04, \"Water links highlighted\")\n",
+    "    plt.tight_layout()"
    ]
   },
   {
