--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-01  "
+    "Last modified: 2024-10-02"
    ]
   },
   {
@@ -39,7 +39,7 @@
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
     "- [X] Create a preprocessing step for poi snapping\n",
-    "- [ ] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
+    "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
     "- [X] Create testing possibility with random poi data, without poi snapping\n",
     "- [X] Make all constants allcaps\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
@@ -66,12 +66,14 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
+    "import shapely\n",
     "import igraph as ig\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import networkx as nx\n",
     "from functools import reduce\n",
-    "import pickle"
+    "import pickle\n",
+    "from itertools import combinations"
    ]
   },
   {
@@ -90,7 +92,8 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "debug = True  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -141,6 +144,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668caa05-3cc6-4783-b466-5671175992b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
+    "nodes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75797837-2c99-4865-a22d-3b674a894754",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "nodes_id = list(nodes.nodeID)\n",
+    "nodes_x = list(nodes.geometry.x)\n",
+    "nodes_y = list(nodes.geometry.y)\n",
+    "nodes_coords = list(zip(NormalizeData(nodes_x), NormalizeData(nodes_y)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f44e7ee-23b2-4fdc-befd-0e3a4663de41",
    "metadata": {},
@@ -153,49 +182,79 @@
    "id": "bc5a1811",
    "metadata": {},
    "source": [
-    "### Get minimal loop basis (=face loops)"
+    "### Get face loops"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa8dd64",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "6e307a33-297f-43d8-9ba8-a93c349b3642",
+   "metadata": {},
    "source": [
-    "# https://python.igraph.org/en/latest/api/igraph.GraphBase.html#minimum_cycle_basis\n",
-    "loopbasis = {}\n",
-    "cid = 0\n",
-    "for c in G.minimum_cycle_basis():\n",
-    "    # Add some statistics\n",
-    "    ws = [G.es(eid)[\"weight\"] for eid in c]\n",
-    "    loopbasis[cid] = {\n",
-    "        \"edges\": c,\n",
-    "        \"length\": sum(reduce(lambda a, b: a + b, ws)),\n",
-    "        \"numnodes\": len(c),\n",
-    "    }\n",
-    "    cid += 1"
+    "The minimum cycle basis is generally not the cycle basis of face loops, see: https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs  \n",
+    "Therefore, we can't use https://python.igraph.org/en/latest/api/igraph.GraphBase.html#minimum_cycle_basis here. Instead, we solve the problem geometrically via shapely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f1944ec-49e6-48c5-bb02-8ab699596ec1",
+   "metadata": {},
+   "source": [
+    "#### Polygonize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e8e8e5",
+   "id": "43159f6b-c81b-44ad-b06a-2dc5258aab3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show longest loop in minimal loop basis\n",
-    "res = {key: val[\"length\"] for key, val in loopbasis.items()}\n",
-    "k = max(res, key=res.get)  # Get face loop with longest length\n",
-    "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e.index in loopbasis[k][\"edges\"]:\n",
-    "        edge_colors.append(\"red\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
+    "edgegeoms = G.es[\"geometry\"]\n",
+    "facepolygons, _, _, _ = shapely.polygonize_full(edgegeoms)\n",
+    "if debug:\n",
+    "    p = gpd.GeoSeries(facepolygons)\n",
+    "    p.plot()\n",
+    "    plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f23522ce-8ada-4918-93d4-858cc7714933",
+   "metadata": {},
+   "source": [
+    "#### Intersect polygons with graph to get face loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ff677c-edfe-4ed5-a08c-4d1f2b9246e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faceloops = {}\n",
+    "for cid, facepoly in tqdm(\n",
+    "    enumerate(facepolygons.geoms), desc=\"Face loops\", total=len(facepolygons.geoms)\n",
+    "):\n",
+    "    facenodeids = list(np.where(list(nodes.intersects(facepoly)))[0])\n",
+    "    facenodeidpairs = list(combinations(facenodeids, 2))\n",
+    "    edgeids = set()  # tuple of edge ids\n",
+    "    l = 0  # total length\n",
+    "    for p in (\n",
+    "        facenodeidpairs\n",
+    "    ):  # We only have node ids but no edge info. Need to try all node pairs.\n",
+    "        try:\n",
+    "            eid = G.get_eid(G.vs.find(name=p[0]), G.vs.find(name=p[1]))\n",
+    "            edgeinfo = G.es[eid]\n",
+    "            edgeids.add(eid)\n",
+    "            l += edgeinfo[\"weight\"]\n",
+    "        except:\n",
+    "            pass\n",
+    "    faceloops[cid] = {\n",
+    "        \"edges\": tuple(edgeids),\n",
+    "        \"length\": l,\n",
+    "        \"numnodes\": len(edgeids),\n",
+    "    }"
    ]
   },
   {
@@ -205,21 +264,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
-    "    edge_color=edge_colors,\n",
-    ")\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.04,\n",
-    "    \"Longest face loop highlighted: \"\n",
-    "    + str(int((MPERUNIT / 1000) * loopbasis[max(loopbasis.keys())][\"length\"]))\n",
-    "    + \"km\",\n",
-    ")\n",
-    "plt.tight_layout()"
+    "if debug:  # Show longest face loop\n",
+    "    res = {key: val[\"length\"] for key, val in faceloops.items()}\n",
+    "    k = max(res, key=res.get)\n",
+    "\n",
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e.index in faceloops[k][\"edges\"]:\n",
+    "            edge_colors.append(\"red\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"grey\")\n",
+    "\n",
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(\n",
+    "        0,\n",
+    "        0.04,\n",
+    "        \"Longest face loop highlighted: \"\n",
+    "        + str(int((MPERUNIT / 1000) * faceloops[k][\"length\"]))\n",
+    "        + \"km\",\n",
+    "    )\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -562,7 +632,7 @@
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "facelooplengths = [c[\"length\"] * MPERUNIT for c in loopbasis.values()]\n",
+    "facelooplengths = [c[\"length\"] * MPERUNIT for c in faceloops.values()]\n",
     "\n",
     "histxy = axes1.hist(facelooplengths, density=False)\n",
     "if MPERUNIT == 1000:\n",
@@ -625,7 +695,7 @@
     "    color=\"red\",\n",
     ")\n",
     "\n",
-    "axes2.hist([c[\"numnodes\"] for c in loopbasis.values()], density=False)\n",
+    "axes2.hist([c[\"numnodes\"] for c in faceloops.values()], density=False)\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Face loop nodes\")\n",
     "\n",
@@ -651,7 +721,7 @@
    "source": [
     "# Show face loops that conform to the length thresholds\n",
     "okedges = set()\n",
-    "for c in loopbasis.values():\n",
+    "for c in faceloops.values():\n",
     "    if (\n",
     "        c[\"length\"] * MPERUNIT >= FACELOOP_LIMIT[0]\n",
     "        and c[\"length\"] * MPERUNIT <= FACELOOP_LIMIT[1]\n",
@@ -713,7 +783,7 @@
     "    pickle.dump(nodes_id, f)\n",
     "    pickle.dump(nodes_coords, f)\n",
     "    pickle.dump(numloops, f)\n",
-    "    pickle.dump(loopbasis, f)"
+    "    pickle.dump(faceloops, f)"
    ]
   }
  ],
