--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-01"
+    "Last modified: 2024-10-02"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
     "        numloops = pickle.load(f)\n",
-    "        loopbasis = pickle.load(f)"
+    "        faceloops = pickle.load(f)"
    ]
   },
   {
