--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -719,21 +719,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show face loops that conform to the length thresholds\n",
-    "okedges = set()\n",
-    "for c in faceloops.values():\n",
-    "    if (\n",
-    "        c[\"length\"] * MPERUNIT >= FACELOOP_LIMIT[0]\n",
-    "        and c[\"length\"] * MPERUNIT <= FACELOOP_LIMIT[1]\n",
-    "    ):\n",
-    "        okedges = okedges.union(set(c[\"edges\"]))\n",
+    "if debug:  # Show face loops that conform to the length thresholds\n",
+    "    okedges = set()\n",
+    "    for c in faceloops.values():\n",
+    "        if (\n",
+    "            c[\"length\"] * MPERUNIT >= FACELOOP_LIMIT[0]\n",
+    "            and c[\"length\"] * MPERUNIT <= FACELOOP_LIMIT[1]\n",
+    "        ):\n",
+    "            okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e.index in okedges:\n",
-    "        edge_colors.append(\"green\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e.index in okedges:\n",
+    "            edge_colors.append(\"green\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"grey\")\n",
+    "\n",
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(0, 0.04, \"Conforming face loops highlighted\")\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -745,15 +755,33 @@
    },
    "outputs": [],
    "source": [
-    "fig = plotCheck(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
-    "    vertex_size == get_vertexsize(G.vcount()),\n",
-    "    edge_color=edge_colors,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"Conforming face loops highlighted\")\n",
-    "plt.tight_layout()"
+    "if debug:  # Show face loops that do not conform to the length thresholds\n",
+    "    toosmalledges = set()\n",
+    "    toolargeedges = set()\n",
+    "    for c in faceloops.values():\n",
+    "        if c[\"length\"] * MPERUNIT > FACELOOP_LIMIT[1]:\n",
+    "            toolargeedges = toolargeedges.union(set(c[\"edges\"]))\n",
+    "        elif c[\"length\"] * MPERUNIT < FACELOOP_LIMIT[0]:\n",
+    "            toosmalledges = toosmalledges.union(set(c[\"edges\"]))\n",
+    "\n",
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e.index in toolargeedges:\n",
+    "            edge_colors.append(\"red\")\n",
+    "        elif e.index in toosmalledges:\n",
+    "            edge_colors.append(\"orange\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"grey\")\n",
+    "\n",
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(0, 0.04, \"Non-conforming face loops highlighted\")\n",
+    "    plt.tight_layout()"
    ]
   },
   {
