Polish histogram plots
- Update network input folder structure

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -38,6 +38,7 @@
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
+    "- [ ] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
     "- [X] Create a preprocessing step for poi snapping\n",
     "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
     "- [X] Create testing possibility with random poi data, without poi snapping\n",
@@ -472,7 +473,9 @@
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "histxy = axes1.hist(linklengths, density=False)\n",
+    "histxy = axes1.hist(\n",
+    "    linklengths, bins=[i * 500 / MPERUNIT for i in list(range(30))], density=False\n",
+    ")\n",
     "axes1.plot([LINK_LIMIT[0], LINK_LIMIT[0]], [0, max(histxy[0])], \":k\")\n",
     "axes1.plot([LINK_LIMIT[1], LINK_LIMIT[1]], [0, max(histxy[0])], \":k\")\n",
     "axes1.plot([LINK_LIMIT[2], LINK_LIMIT[2]], [0, max(histxy[0])], \":r\")\n",
@@ -540,8 +543,9 @@
     "axes1.set_xlabel(\"Length [m]\")\n",
     "axes1.set_ylabel(\"Frequency\")\n",
     "axes1.set_title(\"Link lengths\")\n",
+    "axes1.set_xlim([0, 15000 / MPERUNIT])\n",
     "\n",
-    "histxy = axes2.hist(linkmaxslopes, density=False)\n",
+    "histxy = axes2.hist(linkmaxslopes, bins=[i / 4 for i in list(range(32))], density=False)\n",
     "axes2.plot([MAXSLOPE_LIMIT, MAXSLOPE_LIMIT], [0, max(histxy[0])], \":r\")\n",
     "axes2.text(\n",
     "    MAXSLOPE_LIMIT * 0.95,\n",
@@ -575,6 +579,7 @@
     "axes2.set_xlabel(\"Max slope [%]\")\n",
     "axes2.set_ylabel(\"\")\n",
     "axes2.set_title(\"Link max slopes\")\n",
+    "axes2.set_xlim([0, 8])\n",
     "\n",
     "fig.savefig(PATH[\"plot\"] + \"linkstats\")"
    ]
@@ -610,6 +615,7 @@
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
+    "\n",
     "axes2.hist(allloopnumnodes, density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1)))\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Nodes per loop\")\n",
@@ -634,7 +640,9 @@
     "\n",
     "facelooplengths = [c[\"length\"] * MPERUNIT for c in faceloops.values()]\n",
     "\n",
-    "histxy = axes1.hist(facelooplengths, density=False)\n",
+    "histxy = axes1.hist(\n",
+    "    facelooplengths, bins=[i * 1000 / MPERUNIT for i in list(range(50))], density=False\n",
+    ")\n",
     "if MPERUNIT == 1000:\n",
     "    axes1.set_xlabel(\"Length [km]\")\n",
     "elif MPERUNIT == 1:\n",
@@ -694,12 +702,17 @@
     "    verticalalignment=\"top\",\n",
     "    color=\"red\",\n",
     ")\n",
+    "axes1.set_xlim([0, 50000 / MPERUNIT])\n",
     "\n",
-    "axes2.hist([c[\"numnodes\"] for c in faceloops.values()], density=False)\n",
+    "\n",
+    "axes2.hist(\n",
+    "    [c[\"numnodes\"] for c in faceloops.values()], bins=list(range(30)), density=False\n",
+    ")\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Face loop nodes\")\n",
+    "axes2.set_xlim([0, 30])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"faceloopstats\")"
+    "fig.savefig(PATH[\"plot\"] + \"faceloopstats\");"
    ]
   },
   {
@@ -709,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histxy[0][min(indcond) : max(indcond) + 1]"
+    "# histxy[0][min(indcond) : max(indcond) + 1]"
    ]
   },
   {
