Explore lzma compression

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -63,7 +63,8 @@
     "import numpy as np\n",
     "import networkx as nx\n",
     "from functools import reduce\n",
-    "import pickle"
+    "import pickle\n",
+    "import lzma"
    ]
   },
   {
@@ -766,11 +767,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2050153",
+   "id": "3793d0d0-dc59-474f-9b5d-07151b0842b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH[\"data_out\"] + \"network_preprocessed.pkl\", \"wb\") as f:\n",
+    "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"wb\") as f:\n",
     "    pickle.dump(G, f)"
    ]
   }
