--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -74,7 +74,8 @@
     "import networkx as nx\n",
     "from functools import reduce\n",
     "import pickle\n",
-    "from itertools import combinations"
+    "from itertools import combinations\n",
+    "import lzma"
    ]
   },
   {
@@ -130,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH[\"data_out\"] + \"network_preprocessed.pkl\", \"rb\") as f:\n",
+    "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
     "    G = pickle.load(f)"
    ]
   },
@@ -825,6 +826,27 @@
     "    pickle.dump(nodes_coords, f)\n",
     "    pickle.dump(numloops, f)\n",
     "    pickle.dump(faceloops, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53dadfb8-28ed-42eb-94df-a700b336cb80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bit too slow\n",
+    "# with lzma.open(PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".xz\", \"wb\") as f:\n",
+    "#     pickle.dump(allloops, f)\n",
+    "#     pickle.dump(alllooplengths, f)\n",
+    "#     pickle.dump(allloopnumnodes, f)\n",
+    "#     pickle.dump(allloopmaxslopes, f)\n",
+    "#     pickle.dump(G, f)\n",
+    "#     pickle.dump(LOOP_NUMNODE_BOUND, f)\n",
+    "#     pickle.dump(nodes_id, f)\n",
+    "#     pickle.dump(nodes_coords, f)\n",
+    "#     pickle.dump(numloops, f)\n",
+    "#     pickle.dump(faceloops, f)"
    ]
   }
  ],
