Create first results on Jutland and Fyn
- log10 -> log2 due to information theory literature
- improve max_slope randomness generation
- increase thresholds a bit for random POI generation

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f81d35c7",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,9 @@
     "edges_orig = edges  # Make a deep copy to save the geometries\n",
     "edges[\"edge_id\"] = edges.index  # Make index the edge id\n",
     "if not MAXSLOPES_AVAILABLE:  # Generate random data if max_slopes not available\n",
-    "    edges[\"max_slope\"] = np.random.normal(2, 0.8, edges.shape[0])\n",
+    "    edges[\"max_slope\"] = np.random.normal(2, 2, edges.shape[0]).clip(\n",
+    "        min=0\n",
+    "    ) + np.random.rand(edges.shape[0])\n",
     "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
     "# Set CRS\n",
     "edges.set_crs(\"epsg:25832\")\n",
@@ -622,10 +624,10 @@
     "if not POIS_AVAILABLE:  # Create random data for testing\n",
     "    for e in G.es:\n",
     "        e[\"has_facility\"] = (\n",
-    "            True if np.random.rand() < 0.1 else False\n",
+    "            True if np.random.rand() < 0.11 else False\n",
     "        )  # Reasonably looking thresholds\n",
-    "        e[\"has_service\"] = True if np.random.rand() < 0.15 else False\n",
-    "        e[\"has_attraction\"] = True if np.random.rand() < 0.05 else False\n",
+    "        e[\"has_service\"] = True if np.random.rand() < 0.17 else False\n",
+    "        e[\"has_attraction\"] = True if np.random.rand() < 0.08 else False\n",
     "        poi_diversity = 0\n",
     "        if e[\"has_facility\"]:\n",
     "            e[\"has_water\"] = True\n",
