--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -132,16 +132,7 @@
    "outputs": [],
    "source": [
     "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
-    "    G = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf8002b2-92ea-459b-ba94-30b37c5924b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    G = pickle.load(f)\n",
     "G.summary()"
    ]
   },
