--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -71,9 +71,10 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "load_data = False  # Set to False if data are huge and have already been loaded\n",
+    "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "if PLOTLOGSCALE:\n",
-    "    logtextplot = \"10^\"\n",
+    "    logtextplot = \"2^\"\n",
     "    logtextsave = \"_logscale\"\n",
     "else:\n",
     "    logtextplot = \"\"\n",
@@ -145,7 +146,14 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "if debug:\n",
+    "    plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_width=get_edgewidth(G.ecount()),\n",
+    "    )"
    ]
   },
   {
@@ -231,7 +239,7 @@
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
     "    except:\n",
@@ -248,7 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes)\n",
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    edge_width=get_edgewidth(G.ecount()),\n",
+    ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
     "plt.tight_layout()"
    ]
@@ -316,7 +330,7 @@
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
     "    except:\n",
@@ -349,7 +363,12 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(\n",
-    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    edge_color=edge_colors,\n",
+    "    edge_width=get_edgewidth(G.ecount()),\n",
     ")\n",
     "plt.text(\n",
     "    0,\n",
@@ -443,7 +462,7 @@
     "for k in range(len(allloops_bound_watered.keys())):\n",
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log10(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
+    "            vertex_sizes.append(np.log2(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound_watered[k][\"loops\"]))\n",
     "\n",
@@ -481,7 +500,12 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(\n",
-    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    edge_color=edge_colors,\n",
+    "    edge_width=get_edgewidth(G.ecount()),\n",
     ")\n",
     "plt.text(\n",
     "    0,\n",
@@ -575,7 +599,7 @@
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(\n",
-    "                np.log10(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
+    "                np.log2(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
     "            )\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound_watered_diverse[k][\"loops\"]))\n",
@@ -619,7 +643,12 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(\n",
-    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    edge_color=edge_colors,\n",
+    "    edge_width=get_edgewidth(G.ecount()),\n",
     ")\n",
     "plt.text(\n",
     "    0,\n",
