Incorporate elevation data from bike-node-planner

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -23,7 +23,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-01  \n",
-    "Last modified: 2024-10-02  "
+    "Last modified: 2024-10-04"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = gpd.read_file(PATH[\"data_in_network\"] + \"edges.gpkg\")\n",
+    "edges = gpd.read_file(PATH[\"data_in_network\"] + \"edges_slope.gpkg\")\n",
     "edges_orig = edges  # Make a deep copy to save the geometries\n",
     "edges[\"edge_id\"] = edges.index  # Make index the edge id\n",
     "if not MAXSLOPES_AVAILABLE:  # Generate random data if max_slopes not available\n",
