--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "np.random.seed(42)\n",
-    "debug = False  # Set to True for extra plots and verbosity"
+    "debug = True  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -421,14 +421,9 @@
     "            v.neighbors()[1].index,\n",
     "            weight=sumoflengths,\n",
     "            max_slope=maxofslopes,\n",
+    "            edge_id=v.incident()[0].attributes()[\"edge_id\"],\n",
     "        )\n",
     "G.delete_vertices(to_delete_ids)\n",
-    "\n",
-    "to_delete_ids = []\n",
-    "for e in G.es:\n",
-    "    if e[\"edge_id\"] is None:\n",
-    "        to_delete_ids.append(e.index)\n",
-    "G.delete_edges(to_delete_ids)\n",
     "\n",
     "# Re-simplify\n",
     "G.simplify(\n",
