Add id_cykelknudepkt to graph

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -214,7 +214,11 @@
     "    directed=False,\n",
     "    weights=False,\n",
     "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\", \"geometry\"],\n",
-    ")"
+    ")\n",
+    "for v in G.vs:  # Add id_cykelknudepkt\n",
+    "    G.vs[v.index][\"id_cykelknudepkt\"] = nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0][\n",
+    "        \"id_cykelknudepkt\"\n",
+    "    ]"
    ]
   },
   {
@@ -224,6 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if debug:\n",
+    "    for v in G.vs[:10]:\n",
+    "        print(v)\n",
     "G.summary()"
    ]
   },
