--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -191,7 +191,7 @@
     "# Reorder columns\n",
     "edges = edges[[\"node_start\", \"node_end\", \"weight\", \"edge_id\", \"max_slope\", \"geometry\"]]\n",
     "edges = edges.dropna()  # Drop edges with None node_start or node_end\n",
-    "edges"
+    "edges.head()"
    ]
   },
   {
@@ -739,6 +739,42 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Water links highlighted\")\n",
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43d33a09-4506-4d44-a474-1df6fb7dfdd7",
+   "metadata": {},
+   "source": [
+    "#### Plot max slopes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aad82d95-6fca-48f6-b058-c6c4bc44b269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if debug:\n",
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e[\"max_slope\"] < 4:\n",
+    "            edge_colors.append(\"green\")\n",
+    "        elif e[\"max_slope\"] < 6:\n",
+    "            edge_colors.append(\"orange\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"red\")\n",
+    "\n",
+    "    fig = plotCheck(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(0, 0.04, \"Max slopes highlighted\")\n",
     "    plt.tight_layout()"
    ]
   },
