Note to combine edge geometries

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -31,7 +31,8 @@
    "id": "e451758c-e48c-4c43-97d1-fb7586b8af43",
    "metadata": {},
    "source": [
-    "## To do"
+    "## To do\n",
+    "- [ ] Combine edge geometries when dropping degree 2 nodes"
    ]
   },
   {
@@ -429,6 +430,7 @@
     "            weight=sumoflengths,\n",
     "            max_slope=maxofslopes,\n",
     "            edge_id=v.incident()[0].attributes()[\"edge_id\"],\n",
+    "            # To do: Combine edge geometries\n",
     "        )\n",
     "G.delete_vertices(to_delete_ids)\n",
     "\n",
