Combine edge geometries when dropping degree 2 nodes

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -31,8 +31,7 @@
    "id": "e451758c-e48c-4c43-97d1-fb7586b8af43",
    "metadata": {},
    "source": [
-    "## To do\n",
-    "- [ ] Combine edge geometries when dropping degree 2 nodes"
+    "## To do"
    ]
   },
   {
@@ -57,7 +56,8 @@
     "import networkx as nx\n",
     "from functools import reduce\n",
     "import pickle\n",
-    "import lzma"
+    "import lzma\n",
+    "import shapely"
    ]
   },
   {
@@ -424,13 +424,19 @@
     "                v.incident()[1].attributes()[\"max_slope\"],\n",
     "            ]\n",
     "        )\n",
+    "        both_edges = shapely.geometry.MultiLineString(\n",
+    "            [\n",
+    "                v.incident()[0].attributes()[\"geometry\"],\n",
+    "                v.incident()[1].attributes()[\"geometry\"],\n",
+    "            ]\n",
+    "        )\n",
     "        G.add_edge(\n",
     "            v.neighbors()[0].index,\n",
     "            v.neighbors()[1].index,\n",
     "            weight=sumoflengths,\n",
     "            max_slope=maxofslopes,\n",
     "            edge_id=v.incident()[0].attributes()[\"edge_id\"],\n",
-    "            # To do: Combine edge geometries\n",
+    "            geometry=shapely.line_merge(both_edges),\n",
     "        )\n",
     "G.delete_vertices(to_delete_ids)\n",
     "\n",
