Add more results for zealand, funen, longland
- Save more plots

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -711,7 +711,8 @@
     "        edge_width=edge_widths,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"POI diversity\")\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    fig.savefig(PATH[\"plot\"] + \"poidiversity\")"
    ]
   },
   {
@@ -747,7 +748,8 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Water links highlighted\")\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    fig.savefig(PATH[\"plot\"] + \"waterlinks\")"
    ]
   },
   {
@@ -783,7 +785,8 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Max slopes highlighted\")\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    fig.savefig(PATH[\"plot\"] + \"maxslopes\")"
    ]
   },
   {
