--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-02"
+    "Last modified: 2024-10-04"
    ]
   },
   {
@@ -748,7 +748,8 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Conforming face loops highlighted\")\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    fig.savefig(PATH[\"plot\"] + \"faceloops_conforming\")"
    ]
   },
   {
@@ -786,7 +787,8 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Non-conforming face loops highlighted\")\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    fig.savefig(PATH[\"plot\"] + \"faceloops_nonconforming\")"
    ]
   },
   {
