--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "load_data = False  # Set to False if data are huge and have already been loaded\n",
+    "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "if PLOTLOGSCALE:\n",
@@ -330,7 +330,7 @@
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1.01))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
     "    except:\n",
@@ -462,7 +462,7 @@
     "for k in range(len(allloops_bound_watered.keys())):\n",
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log2(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
+    "            vertex_sizes.append(np.log2(len(allloops_bound_watered[k][\"loops\"]) + 1.01))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound_watered[k][\"loops\"]))\n",
     "\n",
@@ -599,7 +599,7 @@
     "    try:\n",
     "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(\n",
-    "                np.log2(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
+    "                np.log2(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1.01)\n",
     "            )\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound_watered_diverse[k][\"loops\"]))\n",
